--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   sqflite: ^2.4.2
   path: ^1.9.1
   url_launcher: ^6.3.1
+  connectivity_plus: ^6.1.4
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
