--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.8
   http: ^1.1.0
   path_provider: ^2.1.1
   webview_flutter: ^4.4.2
@@ -22,6 +20,7 @@ dependencies:
   url_launcher: ^6.3.1
   connectivity_plus: ^6.1.4
   shared_preferences: ^2.2.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
@@ -30,3 +29,26 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  # 폰트 설정
+  fonts:
+    - family: Pretendard
+      fonts:
+        - asset: fonts/Pretendard-Thin.ttf
+          weight: 100
+        - asset: fonts/Pretendard-ExtraLight.ttf
+          weight: 200
+        - asset: fonts/Pretendard-Light.ttf
+          weight: 300
+        - asset: fonts/Pretendard-Regular.ttf
+          weight: 400
+        - asset: fonts/Pretendard-Medium.ttf
+          weight: 500
+        - asset: fonts/Pretendard-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Pretendard-Bold.ttf
+          weight: 700
+        - asset: fonts/Pretendard-ExtraBold.ttf
+          weight: 800
+        - asset: fonts/Pretendard-Black.ttf
+          weight: 900
