--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   http: ^1.1.0
   path_provider: ^2.1.1
   webview_flutter: ^4.4.2
@@ -20,7 +22,7 @@ dependencies:
   url_launcher: ^6.3.1
   connectivity_plus: ^6.1.4
   shared_preferences: ^2.2.2
-  intl: ^0.18.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
