--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  go_router: ^14.6.1
   http: ^1.1.0
   path_provider: ^2.1.1
   webview_flutter: ^4.4.2
@@ -22,7 +23,8 @@ dependencies:
   url_launcher: ^6.3.1
   connectivity_plus: ^6.1.4
   shared_preferences: ^2.2.2
-  intl: ^0.19.0
+  intl: ^0.20.2
+  open_file: ^3.5.10
 
 dev_dependencies:
   flutter_test:
